@@ -7,9 +7,7 @@
 using namespace SH;
 using namespace ShUtil;
 
-enum WorleyType {
-
-};
+#include "util.hpp"
 
 class WorleyShader : public Shader {
 public:
@@ -23,10 +21,6 @@ public:
   // sets default vertex shader, phong fsh 
   bool init(); 
 
-  // returns a worley program that uses the given uniforms for coefficients 
-  // and frequency, and the specified metric
-  ShProgram makeWorleySh(ShWorleyMetric m, const ShAttrib4f &coeff, const ShAttrib1f &freq, bool keepGradients) const;
-
   // sets colours, specular, worley function specific to each subclass and uses algebra to 
   // add on to the default phong shader
   virtual void initfsh() = 0;
@@ -35,12 +29,13 @@ public:
 
   // uniforms used by subclasses
   ShAttrib1f param, freq, exponent;
-  ShAttrib4f coeff;
+  /*static*/ ShAttrib4f coeff;
   ShColor3f color1, color2;
 
-  ShUtil::ShWorleyMetric metric;
+  //ShUtil::ShWorleyMetric metric;
   bool useTexture;
 };
+//ShAttrib4f WorleyShader::coeff;
 
 bool WorleyShader::init() {
   std::cerr << "Initializing " << name() << std::endl;
@@ -49,7 +44,7 @@ bool WorleyShader::init() {
   param.range(0.0f, 1.0f);
 
   freq.name("Worley frequency");
-  freq = 8.0;
+  freq = 16.0;
   freq.range(0.1f, 128.0f);
 
   coeff.name("Worley coefficient");
@@ -67,10 +62,6 @@ bool WorleyShader::init() {
   color2.range(-2.0f, 2.0f);
 
   vsh = ShKernelLib::shVsh(Globals::mv, Globals::mvp, 1) << shExtract("lightPos") << Globals::lightPos; 
-  vsh = shSwizzle("texcoord", "normalt", "halfVect", "lightVect", "posh") << vsh;
-  renameOutput(vsh, "normalt", "normal");
-  renameOutput(vsh, "halfVect", "halfVec");
-  renameOutput(vsh, "lightVect", "lightVec");
 
   ShConstColor3f lightColor(1.0f, 1.0f, 1.0f);
   fsh = ShKernelSurface::phong<ShColor3f>() << shExtract("specExp") << exponent;
@@ -79,29 +70,73 @@ bool WorleyShader::init() {
   initfsh();
   return true;
 }
+class GradientWorley: public WorleyShader {
+  public:
+    GradientWorley(bool useTexture): WorleyShader("Worley: Gradients", useTexture) {}
 
-ShProgram WorleyShader::makeWorleySh(ShWorleyMetric m, const ShAttrib4f &c, const ShAttrib1f &f, bool keepGradients) const {
-    ShProgram result = worleyProgram<4, float>(m, useTexture) << c; // pass in coefficient
-    result = result << ( mul<ShTexCoord2f>("texcoord") << fillcast<2>(f)); // multiply by worley frequency
-    if( !keepGradients ) result = shDrop("gradient") << result; 
-    return result;
-}
+    void initfsh() {
+      DefaultGenFactory<2, float> genFactory(useTexture);
+      DistSqGradientPropFactory<2, float> propFactory; 
+
+      ShProgram worleysh = shWorley<4>(&genFactory, &propFactory) << coeff << coeff << coeff;
+      worleysh = worleysh << (mul<ShTexCoord2f>("texcoord", "freq", "texcoord") << fillcast<2>(freq));
+
+      ShAttrib1f SH_DECL(bumpScale) = ShConstAttrib1f(1.0f);
+      bumpScale.range(-10.0f, 10.0f);
+
+      color1 = ShColor3f(1.0, 0.0, 0.0);
+      color2 =  ShColor3f(0.0, 1.0, 0.0);
+      ShProgram color = SH_BEGIN_PROGRAM("gpu:fragment") {
+        ShInputAttrib3f SH_DECL(result);
+        ShInputPosition4f SH_DECL(posh);
+        ShOutputColor3f SH_NAMEDECL(resultColor, "result");
+        resultColor = bumpScale * (color1 * result(1) + color2 * result(2)); 
+      } SH_END;
+
+      fsh = color << worleysh;
+      vsh = namedAlign(vsh, fsh);
+    }
+};
+
 
 class OrganicWorley: public WorleyShader {
   public:
     OrganicWorley(bool useTexture): WorleyShader("Worley: Organic", useTexture) {}
 
     void initfsh() {
-      ShProgram worleysh = makeWorleySh(L2_SQ, coeff, freq, true); 
+      DefaultGenFactory<2, float> genFactory(useTexture);
+      DistSqGradientPropFactory<2, float> propFactory; 
 
-      color1 = ShColor3f(0.7, 0.2, 0.3);
-      color2 =  ShColor3f(0.4, 0.0, 0.0);
+      ShProgram worleysh = shWorley<4>(&genFactory, &propFactory) << coeff << coeff << coeff;
+      worleysh = worleysh << (mul<ShTexCoord2f>("texcoord", "freq", "texcoord") << fillcast<2>(freq));
 
-      ShProgram colorAndBump = lerp<ShColor3f, ShAttrib1f>("kd") << color1 << color2;  // kd is a lerp based on the worley scalar
-      colorAndBump = (colorAndBump & (keep<ShColor3f>("ks") << fillcast<ShAttrib1f, ShColor3f>())) << shDup(); 
-      colorAndBump = colorAndBump & ShKernelSurfMap::bump(); 
+      ShAttrib1f SH_DECL(bumpScale) = ShConstAttrib1f(3.0f);
+      bumpScale.range(-10.0f, 10.0f);
 
-      fsh = fsh << colorAndBump << worleysh;
+      color1 = ShColor3f(0.4, 0.0, 0.0);
+      color2 =  ShColor3f(0.2, 0.6, 0.2);
+
+      ShConstAttrib1f ZERO(0.0f);
+      ShConstAttrib1f ONE(1.0f);
+      ShProgram colorAndBump = SH_BEGIN_PROGRAM() {
+        ShInputAttrib3f SH_DECL(result);
+        ShInputVector3f SH_DECL(tangent) = normalize(tangent);
+        ShInputVector3f SH_DECL(tangent2) = normalize(tangent2);
+        ShInputVector3f SH_DECL(lightVec) = normalize(lightVec);
+
+        ShInOutNormal3f SH_DECL(normal) = normalize(normal); 
+        ShOutputColor3f SH_DECL(kd);
+        ShOutputColor3f SH_DECL(ks);
+        ShOutputVector3f SH_DECL(halfVec);
+
+        kd = ks = lerp(clamp(ZERO, ONE, result(0)), color1, color2);
+        normal += bumpScale * (result(1) * tangent + result(2) * tangent2);
+        normal = normalize(normal);
+        halfVec = 0.5f * (normal + lightVec); 
+      } SH_END;
+
+      fsh = namedConnect((colorAndBump << worleysh), fsh);
+      vsh = namedAlign(vsh, fsh);
     }
 };
 
@@ -110,7 +145,8 @@ class PolkaDotWorley: public WorleyShader {
     PolkaDotWorley(bool useTexture): WorleyShader("Worley: Polka Dot", useTexture) {}
 
     void initfsh() {
-      ShProgram worleysh = makeWorleySh(L2_SQ, coeff, freq, false); 
+      ShProgram worleysh = shWorley<4, 2, float>(useTexture) << coeff;
+      worleysh = worleysh << (mul<ShTexCoord2f>("texcoord", "freq", "texcoord") << fillcast<2>(freq));
 
       // make polkadots by clamping the scalar result from worley
       ShProgram polkash = SH_BEGIN_PROGRAM() {
@@ -126,6 +162,7 @@ class PolkaDotWorley: public WorleyShader {
       colorsh = colorsh & ( keep<ShColor3f>("ks") << specularColor); 
 
       fsh = fsh << colorsh << worleysh;
+      vsh = namedAlign(vsh, fsh);
     }
 };
 
@@ -137,8 +174,16 @@ class LavaWorley: public WorleyShader {
       coeff = ShConstAttrib4f(-1, 1.2, 0, 0);
       ShAttrib4f SH_NAMEDECL(coeff2, "Worley coefficient 2") = ShConstAttrib4f(0, 1, 1, 0);
       ShAttrib1f SH_NAMEDECL(freq2, "Worley frequency 2") = freq * 2.131313f;
-      ShProgram worleysh = makeWorleySh(L1, coeff, freq, false); 
-      ShProgram worleysh2 = makeWorleySh(L2_SQ, coeff2, freq2, false); 
+
+      DefaultGenFactory<2, float> genFactory(useTexture);
+      DistSqPropFactory<2, float> distSqPropFactory;
+      Dist_1PropFactory<2, float> dist_1PropFactory;
+
+      ShProgram worleysh = shWorley<4>(&genFactory, &dist_1PropFactory) << coeff;
+      worleysh = worleysh << (mul<ShTexCoord2f>("texcoord", "freq", "texcoord") << fillcast<2>(freq));
+
+      ShProgram worleysh2 = shWorley<4>(&genFactory, &distSqPropFactory) << coeff2;
+      worleysh2 = worleysh2 << (mul<ShTexCoord2f>("texcoord", "freq", "texcoord") << fillcast<2>(freq2));
 
       worleysh = sub<ShAttrib1f>() << namedCombine(worleysh, worleysh2);
 
@@ -150,6 +195,7 @@ class LavaWorley: public WorleyShader {
       colorsh = colorsh & ( keep<ShColor3f>("ks") << specularColor); 
 
       fsh = fsh << colorsh << worleysh;
+      vsh = namedAlign(vsh, fsh);
     }
 };
 
@@ -161,8 +207,14 @@ class GiraffeWorley: public WorleyShader {
       param = ShConstAttrib1f(0.75);
       coeff = ShConstAttrib4f(-1, 1, 0, 0);
       ShAttrib4f SH_NAMEDECL(coeff2, "Worley coefficient 2") = ShConstAttrib4f(0, -1, 1, 0);
-      ShProgram worleysh = makeWorleySh(L1, coeff, freq, false); 
-      ShProgram worleysh2 = makeWorleySh(L1, coeff2, freq, false); 
+
+      DefaultGenFactory<2, float> genFactory(useTexture);
+      Dist_1PropFactory<2, float> dist_1PropFactory;
+      ShProgram worleysh = shWorley<4>(&genFactory, &dist_1PropFactory) << coeff;
+      worleysh = worleysh << (mul<ShTexCoord2f>("texcoord", "freq", "texcoord") << fillcast<2>(freq));
+
+      ShProgram worleysh2 = shWorley<4>(&genFactory, &dist_1PropFactory) << coeff2;
+      worleysh2 = worleysh2 << (mul<ShTexCoord2f>("texcoord", "freq", "texcoord") << fillcast<2>(freq));
 
       // make patches out of the two
       ShProgram patcher = SH_BEGIN_PROGRAM() {
@@ -184,6 +236,7 @@ class GiraffeWorley: public WorleyShader {
       colorsh = colorsh & ( keep<ShColor3f>("ks") << specularColor); 
 
       fsh = fsh << colorsh << worleysh;
+      vsh = namedAlign(vsh, fsh);
     }
 };
 
@@ -193,9 +246,15 @@ class CircuitWorley: public WorleyShader {
 
     void initfsh() {
       coeff = ShConstAttrib4f(0, 0, 0, 1);
-      ShProgram worleysh = makeWorleySh(L1, coeff, freq, false); 
       ShAttrib1f SH_NAMEDECL(freq2, "Worley frequency 2") = freq * 2.131313f;
-      ShProgram worleysh2 = makeWorleySh(L1, coeff, freq2, false); 
+
+      DefaultGenFactory<2, float> genFactory(useTexture);
+      Dist_1PropFactory<2, float> dist_1PropFactory;
+      ShProgram worleysh = shWorley<4>(&genFactory, &dist_1PropFactory) << coeff;
+      worleysh = worleysh << (mul<ShTexCoord2f>("texcoord", "freq", "texcoord") << fillcast<2>(freq));
+
+      ShProgram worleysh2 = shWorley<4>(&genFactory, &dist_1PropFactory) << coeff;
+      worleysh2 = worleysh2 << (mul<ShTexCoord2f>("texcoord", "freq", "texcoord") << fillcast<2>(freq2));
 
       color1 = ShColor3f(0.0, 0.2, 0.8);
       color2 =  ShColor3f(0.6, 0.6, 0.7);
@@ -216,6 +275,7 @@ class CircuitWorley: public WorleyShader {
       worleysh = namedCombine(worleysh, worleysh2);
       worleysh = colorizer << worleysh;
       fsh = fsh << worleysh; 
+      vsh = namedAlign(vsh, fsh);
     }
 };
 
@@ -235,10 +295,11 @@ class CrackedWorley: public WorleyShader {
       coeff = ShConstAttrib4f(2.5, -0.5f, -0.1f, 0);
       freq = ShConstAttrib1f(16.0f);
 
-      ShWorleyLerpingPointGen<float> generator(time);
-      ShProgram worleysh = worleyProgram<4, float>(L2_SQ, useTexture, generator) << coeff; // pass in coefficient
-      worleysh = worleysh << ( mul<ShTexCoord2f>("texcoord") << fillcast<2>(freq)); // multiply by worley frequency
-      worleysh = shDrop("gradient") << worleysh; 
+      LerpGenFactory<2, float> genFactory(time, useTexture);
+      DistSqPropFactory<2, float> propFactory;
+
+      ShProgram worleysh = shWorley<4>(&genFactory, &propFactory) << coeff; // pass in coefficient
+      worleysh = worleysh << (mul<ShTexCoord2f>("texcoord", "freq", "texcoord") << fillcast<2>(freq));
 
       ShProgram clamper = SH_BEGIN_PROGRAM() {
         ShInOutAttrib1f SH_DECL(scalar) = clamp(0.0f, 1.0f, scalar);
@@ -248,11 +309,272 @@ class CrackedWorley: public WorleyShader {
       ShProgram colorsh = lerp<ShColor3f, ShAttrib1f>("kd") << color1 << color2;  // kd is a lerp based on the worley scalar
       colorsh = colorsh & ( keep<ShColor3f>("ks") << specularColor); 
       fsh = fsh << colorsh << worleysh;
+      vsh = namedAlign(vsh, fsh);
+    }
+};
+
+class StoneWorley: public WorleyShader {
+  public:
+    StoneWorley(bool useTexture): WorleyShader("Worley: Stone Tile", useTexture) {}
+
+    void initfsh() {
+      color1 = ShColor3f(1.5, 0.75, 0.0);
+
+      ShColor3f specularColor(0.25f, 0.25f, 0.25f);
+      ShAttrib1f SH_DECL(threshold) = ShConstAttrib1f(0.1f);
+      threshold.range(-1.0f, 1.0f);
+
+      coeff = ShConstAttrib4f(-1.0f, 1.0f, 0.0f, 0.0f);
+      ShAttrib4f noiseCoeff = ShConstAttrib4f(1.0f, 0.0f, 0.0f, 0.0f);
+
+      freq = ShConstAttrib1f(16.0f);
+
+      DefaultGenFactory<2, float> genFactory(useTexture);
+      //NullGenFactory<2, float> genFactory;
+      DistSqPropFactory<2, float> distPropFactory;
+      CellnoisePropFactory<1, 2, float> noisePropFactory(useTexture);
+      PropertyFactory<2, 2, float> *propFactory = combine(&distPropFactory, &noisePropFactory);
+
+      ShProgram worleysh = shWorley<4>(&genFactory, propFactory) << coeff << noiseCoeff; // pass in coefficients 
+      worleysh = worleysh << (mul<ShTexCoord2f>("texcoord", "freq", "texcoord") << fillcast<2>(freq));
+
+      ShColor3f SH_DECL(noiseColor) = ShConstAttrib3f(0.1f, 0.2f, 0.2f);
+      noiseColor.range(0.0f, 1.0f);
+
+      ShAttrib1f SH_DECL(noiseFreq) = ShConstAttrib1f(64.0f);
+      noiseFreq.range(0.0f, 768.0f);
+
+      ShAttrib3f SH_DECL(turbulenceAmps) = ShConstAttrib3f(1.0f, 0.5f, 0.25f);
+      turbulenceAmps.range(0.0f, 1.0f);
+
+      ShProgram color = SH_BEGIN_PROGRAM() {
+        ShInputTexCoord2f SH_DECL(texcoord);
+        ShInputAttrib2f SH_DECL(result);
+        ShInputVector3f SH_DECL(lightVec);
+
+        ShInOutNormal3f SH_DECL(normal);
+        ShOutputVector3f SH_DECL(halfVec);
+        ShOutputColor3f SH_DECL(kd);
+        ShOutputColor3f SH_DECL(ks);
+
+        ShAttrib1f inGrout = result(0) < threshold;
+        kd = noiseColor * sturbulence<1>(turbulenceAmps, texcoord * noiseFreq, useTexture);
+        kd = lerp(inGrout, ShConstColor3f(1.0f, 1.0f, 1.0f), result(1,1,1) * color1 + kd);
+        ks = specularColor; 
+        //halfVec = 0.5*(normal + normalize(lightVec));
+        //kd = sturbulence<3>(turbulenceAmps, texcoord * noiseFreq, useTexture);
+      } SH_END;
+
+      fsh = namedConnect(namedConnect(worleysh, color), fsh);
+      vsh = namedAlign(vsh, fsh);
+      
+      delete propFactory;
+    }
+};
+
+class TurbulentWorley: public WorleyShader {
+  public:
+    TurbulentWorley(bool useTexture): WorleyShader("Worley: Turbulence", useTexture) {}
+
+    void initfsh() {
+      ShAttrib4f SH_NAMEDECL(amps, "Octave_Amplitudes") = ShConstAttrib4f(1.0f, 0.5f, 0.25f, 0.125f);
+      amps.range(0.0f, 1.0f);
+      const int N = 4; // number of octaves
+
+      color1 = ShColor3f(1.0f, 1.0f, 1.0f);
+      color2 = ShColor3f(0.0f, 0.0f, 0.0f); 
+      ShColor3f specularColor(0.5, 0.5, 0.5);
+
+      coeff = ShConstAttrib4f(0.0f, 0.5f, 0.5f, 0.0f);
+      freq = ShConstAttrib1f(16.0f);
+
+      ShProgram worleysh[N];
+      for(int i = N - 1; i >= 0; --i) {
+        DefaultGenFactory<2, float> genFactory(useTexture);
+        Dist_1PropFactory<2, float> distFactory;
+        worleysh[i] = shWorley<4>(&genFactory, &distFactory) << coeff; 
+        ShProgram multiplier = SH_BEGIN_PROGRAM() {
+          ShInOutTexCoord2f SH_DECL(texcoord);
+          texcoord *= freq * (float)(1 << i);
+        } SH_END;
+        worleysh[i] = worleysh[i] << multiplier; 
+      }
+      ShProgram comboWorley = worleysh[0];
+      for(int i = 1; i < N; ++i) {
+        comboWorley = namedCombine(comboWorley, worleysh[i]);
+      }
+
+      ShProgram colorizer = SH_BEGIN_PROGRAM() {
+        ShInputAttrib1f SH_DECL(result[N]);
+        ShOutputColor3f SH_DECL(kd);
+        ShOutputColor3f SH_DECL(ks);
+        ShAttrib1f weightedResult(0.0f); 
+        for(int i = 0; i < N; ++i) weightedResult = mad(result[i], amps(i), weightedResult);
+        kd = lerp(weightedResult, color1, color2);
+        ks = kd;
+      } SH_END;
+
+      fsh = fsh << colorizer << comboWorley; 
+      vsh = namedAlign(vsh, fsh);
+    }
+};
+
+class MosaicWorley: public WorleyShader {
+  public:
+    MosaicWorley(bool useTexture): WorleyShader("Worley: Mosaic", useTexture) {}
+
+    void initfsh() {
+      ShColor3f specularColor(0.5, 0.5, 0.5);
+      double myfreq = 64.0;
+
+      freq = ShConstAttrib1f(myfreq);
+
+      ShImage image;
+      image.loadPng(SHMEDIA_DIR "/textures/kd.png");
+      ShTexture2D<ShColor3f> mosaicTex(image.width(), image.height());
+      mosaicTex.name("Mosaic Texture");
+      mosaicTex.memory(image.memory());
+
+      std::string imageNames[6] = {"left", "right", "top", "bottom", "back", "front"};
+      ShImage test_image;
+      test_image.loadPng(std::string(SHMEDIA_DIR "/envmaps/aniroom/") + imageNames[0] + ".png");
+
+      ShTextureCube<ShColor4f> cubemap(test_image.width(), test_image.height());
+      {
+        for (int i = 0; i < 6; i++) {
+          ShImage image2;
+          image2.loadPng(std::string(SHMEDIA_DIR "/envmaps/aniroom/") + imageNames[i] + ".png");
+          cubemap.memory(image2.memory(), static_cast<ShCubeDirection>(i));
+        }
+      }
+
+      ShAttrib1f SH_DECL(texScale) = ShConstAttrib1f(image.width()/myfreq);
+      texScale.range(0.0f, 128.0f);
+
+      DefaultGenFactory<2, float> genFactory(useTexture);
+      //NullGenFactory<2, float> genFactory;
+      DistSqPropFactory<2, float> distFactory;
+      Tex2DPropFactory<ShColor3f, float> tex2dFactory(mosaicTex, texScale);
+
+      coeff = ShConstAttrib4f(-1.0f, 1.0f, 0.0f, 0.0f);
+
+      ShAttrib4f SH_DECL(colorCoeff) = ShConstAttrib4f(1.0f, 0.0f, 0.0f, 0.0f);
+      colorCoeff.range(-2.0f, 2.0f);
+
+      ShProgram worleysh = shWorley<4>(&genFactory, combine(&distFactory, &tex2dFactory)) 
+        << coeff << colorCoeff << colorCoeff << colorCoeff; // pass in coefficient
+      worleysh = worleysh << (mul<ShTexCoord2f>("texcoord", "freq", "texcoord") << fillcast<2>(freq));
+
+
+      ShAttrib1f theta = ShAttrib1f(1.3f);
+      theta.name("relative indices of refraction");
+      theta.range(0.0f,2.0f);
+
+      ShAttrib1f SH_NAMEDECL(threshold, "Lattice threshold") = ShAttrib1f(0.1f);
+      threshold.range(-1.0f, 1.0f);
+
+      // TODO actually get the glass shader instead of rewriting it here
+      ShProgram vshAddon = SH_BEGIN_PROGRAM("gpu:vertex") {
+        ShInOutNormal3f SH_DECL(normal);
+        ShInOutVector3f SH_DECL(viewVec);
+        ShOutputVector3f SH_DECL(reflv);
+        ShOutputVector3f SH_DECL(refrv);
+        ShOutputAttrib1f SH_DECL(fres);
+        
+        reflv = reflect(viewVec,normal); // Compute reflection vector
+        refrv = refract(viewVec,normal,theta); // Compute refraction vector
+        fres = fresnel(viewVec,normal,theta); // Compute fresnel term
+
+        // actually do reflection and refraction lookup in model space
+        reflv = Globals::mv_inverse | reflv;
+        refrv = Globals::mv_inverse | refrv;
+      } SH_END;
+      vsh = namedConnect(vsh, vshAddon, true);
+
+      ShProgram perturber = SH_BEGIN_PROGRAM("gpu:fragment") {
+        ShInputAttrib4f SH_DECL(result); // worley result - scalar and RGB color
+
+        ShOutputColor3f SH_DECL(color);
+        ShInOutAttrib1f SH_DECL(fres);
+        // stain colours inside mosaic tiles and at tile edges,
+        // make it opaque and black
+        ShAttrib1f inEdge = result(0) < threshold; 
+        
+        color = lerp(inEdge, ShConstColor3f(0.0f, 0.0f, 0.0f), result(1,2,3)); 
+        fres = lerp(inEdge, ShConstAttrib1f(1.0f), fres); 
+      } SH_END;
+      
+      fsh = SH_BEGIN_PROGRAM("gpu:fragment") {
+        ShInputPosition4f SH_DECL(posh);
+        ShInputColor3f SH_DECL(color); // stain color on glass
+        ShInputNormal3f SH_DECL(normal);  // normal
+        ShInputVector3f SH_DECL(reflv); // Compute reflection vector
+        ShInputVector3f SH_DECL(refrv); // Compute refraction vector
+        ShInputAttrib1f SH_DECL(fres); // Compute fresnel term
+
+        ShOutputColor3f result;
+        
+        result = color * lerp(fres, cubemap(reflv)(0,1,2), cubemap(refrv)(0,1,2)); 
+      } SH_END;
+
+      fsh = namedConnect(perturber << worleysh, fsh); 
+      vsh = namedAlign(vsh, fsh);
+    }
+}; 
+
+class Worley3D: public WorleyShader {
+  public:
+    Worley3D(bool useTexture): WorleyShader("Worley: 3D", useTexture) {}
+
+    void initfsh() {
+      ShProgram worleysh = shWorley<1, 3, float>(useTexture) << ShConstAttrib1f(1.0f);
+      worleysh = worleysh << (mul<ShTexCoord3f>("texcoord", "freq", "posv") << fillcast<3>(freq));
+
+      // make polkadots by clamping the scalar result from worley
+      color1 = ShColor3f(0.27, 0.35, 0.45);
+      color2 =  ShColor3f(1.0, 0.7, 0.0);
+      ShColor3f specularColor(0.5, 0.5, 0.5);
+
+      ShProgram colorsh = lerp<ShColor3f, ShAttrib1f>("kd") << color1 << color2;  // kd is a lerp based on the worley scalar
+      colorsh = colorsh & ( keep<ShColor3f>("ks") << specularColor); 
+
+      fsh = fsh << colorsh << worleysh;
+      vsh = namedAlign(vsh, fsh);
+    }
+};
+
+class Worley2D: public WorleyShader {
+  public:
+    Worley2D(bool useTexture): WorleyShader("Worley: 2D", useTexture) {}
+
+    void initfsh() {
+      ShProgram worleysh = shWorley<4, 2, float>(useTexture) << coeff; 
+      worleysh = worleysh << (mul<ShTexCoord2f>("texcoord", "freq", "posv") << fillcast<2>(freq));
+
+      // make polkadots by clamping the scalar result from worley
+      color1 =  ShColor3f(1.0, 1.0f, 1.0f); 
+      color2 = ShColor3f(0.0f, 0.0f, 0.0f);
+      ShColor3f specularColor(0.0, 0.0, 0.0);
+
+      ShProgram colorsh = lerp<ShColor3f, ShAttrib1f>("kd") << color1 << color2;  // kd is a lerp based on the worley scalar
+      colorsh = colorsh & ( keep<ShColor3f>("ks") << specularColor); 
+
+      fsh = fsh << colorsh << worleysh;
+      vsh = namedAlign(vsh, fsh);
     }
 };
 
 CrackedWorley cracked(true);
-OrganicWorley organic(false);
+CrackedWorley crackedProcedural(false);
+
+//GradientWorley gradworley(true);
+StoneWorley stone(true);
+OrganicWorley organic(true);
+TurbulentWorley turb(true);
+MosaicWorley mosaic(true);
+//Worley3D worley3d(true);
+Worley2D worley2d(true);
+
 PolkaDotWorley polka(false);
 LavaWorley lava(false);
 GiraffeWorley giraffe(false);
