@@ -1,3 +1,7 @@
+2004-05-20  Bryan Chan <b8chan@uwaterloo.ca>
+  * src/shaders/WorleyShader.cpp:
+  Added a bucket load of Worley shaders. 
+  
 2004-04-14  Stefanus Du Toit  <sjdutoit@uwaterloo.ca>
 
 	* src/AlgebraShader.cpp (AlgebraShaders): Don't include "nulls" in
